--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           
             <!-- BOTÃO -->
             <div class="flex items-center justify-center">
-              <button class=" text-lg px-6 py-3 rounded-xl hover: transition duration-300 shadow-md">
+              <button class=" text-lg px-6 py-3 rounded-xl hover:text-buttonfont  hover:bg-buttonFundo transition duration-800 shadow-md">
                 Solicite nossos serviços
               </button>
             </div>
