--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 
-<body class="bg-fundo font-fontText text-font">
+<body class="bg-fundo bg-bg-fundo font-fontText text-font">
 
   <header class="bg-black flex items-center justify-between px-4 py-2 shadow-md w-full ">
     <div>
@@ -25,6 +25,7 @@
   </header>
 
   <main class="">
+    <!-- home -->
     <div class="relative min-h-screen bg-bg-fundo bg-cover bg-center">
       <div class="absolute inset-0 bg-gradient-to-r from-black/80 to-transparent"></div>
 
@@ -69,14 +70,19 @@
         </div>
       </div>
     </div>
-    <div style="background: linear-gradient(to bottom,
-     rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0.85) 50%, rgb(32, 30, 67)100%)">
+    <!-- fim home -->
+
+    <!-- sobre nos -->
+
+    <div class="rotate-0" style=" background: linear-gradient(to bottom, rgb(0, 0, 0,2%) 0%,rgba(32, 32,
+      34, 0.1) 10%, rgba(0, 0, 0, 0.85) 50%, rgb(32, 30, 67)100%)">
+
       <div class="flex flex-col items-center p-5 ">
         <div class="relative z-10 flex flex-col items-center justify-center h-full px-4 text-center">
-          <h2 class="text-2xl md:text-4xl font-bold mb-4">Sobre nós</h2>
+          <h2 class="text-2xl md:text-4xl font-bold mb-4 mt-3">Sobre nós</h2>
         </div>
         <div>
-          <p class="text-lg md:text-xl max-w-xl mb-6">
+          <p class="text-lg md:text-xl max-w-xl">
             A Silva Sites nasceu com um propósito claro: ajudar
             negócios a se posicionarem no digital com
             profissionalismo e estratégia. Acreditamos que todo
@@ -89,17 +95,18 @@
       </div>
 
 
-      <div class="relative min-h-screen flex items-center justify-center ">
-        <div class="relative z-10 text-center px-4 max-w-2xl">
-          <h2 class="text-2xl md:text-4xl font-bold pb- 2 mb-4">Criamos soluções digitais reais</h2>
-          <p class=" text-lg">
-            Criamos sites, plataformas e automações com foco total na sua realidade. Nada de soluções genéricas: aqui,
-            cada projeto é pensado para refletir sua marca e atingir seus objetivos.
-          </p>
-        </div>
+
+
+      <div class="flex flex-col items-center justify-center h-full text-center px-4 p-16 m-1">
+        <h2 class="text-2xl md:text-4xl font-bold pb-2 mb-4">Criamos soluções digitais reais</h2>
+        <p class=" text-lg">
+          Criamos sites, plataformas e automações com foco total na sua realidade. Nada de soluções genéricas: aqui,
+          cada projeto é pensado para refletir sua marca e atingir seus objetivos.
+        </p>
       </div>
 
-      <!-- Seção com os serviços -->
+
+
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 px-6 py-1 text-center">
         <div class=" p-3  bg-white py-2 rounded-lg">
           <p>Criação de sites institucionais e personalizados</p>
@@ -118,7 +125,12 @@
 
 
     </div>
+
+    <!-- fim sobre nos -->
+
     </div>
+    </div>
+
   </main>
 </body>
 
