--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/styles/output.css" />
-  <title>Document</title>
+  <link rel="icon" type="image/png" href="./assets/favicon.png" />
+  <title>Silva Sites</title>
 </head>
 
 <body class="bg-fundo bg-bg-fundo font-fontText text-font">
 
   <header class="bg-black flex items-center justify-between px-4 py-2 shadow-md w-full ">
     <div>
-      <img class="w-16 h-auto" src="./assets/logo principal.png" alt="logo da Empresa" />
+      <img class="w-16 h-auto" src="./assets/favicon.png" alt="logo da Empresa" />
     </div>
     <nav class="flex space-x-6 font-medium">
       <a href="#" class="hover:text-blue-600 transition-colors">Home</a>
