--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/styles/output.css" />
-  <link rel="icon" type="image/png" href="./assets/favicon.png" />
+  <link rel="icon" type="image/png" href="./assets/favicon.png"/>
+  <link rel="stylesheet" href="./styles/footer.css">
   <title>Silva Sites</title>
 </head>
 
@@ -39,7 +40,7 @@
               <div class="w-4 h-1 rounded bg-green-500"></div>
               <div class="w-4 h-1 rounded bg-blue-500"></div>
             </div>
-            <h1 class="text-4xl font-bold mb-4">Seu negócio online com identidade e performaçe</h1>
+            <h1 class="text-4xl font-bold mb-4">Seu negócio online com identidade e performace</h1>
             <p class="text-gray-300 mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero
               risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
             <button
@@ -133,6 +134,40 @@
     </div>
 
   </main>
+
+  <!-- inicio do footer-->
+  
+  <footer class="site-footer">
+    <div class="footer-container">
+      <div class="footer-brand">
+        <img class="favicon-footer" src="/assets/favicon.png" alt="Favicon Silva Sites">
+        <h2>Silva Sites</h2>
+        <p>Seu negócio online com identidade e performace.</p>
+      </div>
+  
+      <div class="footer-links">
+        <h3>Links rápidos</h3>
+        <ul>
+          <li><a href="#hero">Início</a></li>
+          <li><a href="#sobrenos">Sobre nós</a></li>
+          <li><a href="#projetos">Projetos</a></li>
+          <li><a href="#servicos">Serviços</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-contato">
+        <h3>Fale conosco</h3>
+        <p>Email: contato@silvasites.com</p>
+        <p>WhatsApp: (00) 90000-0000</p>
+      </div>
+    </div>
+  
+    <div class="footer-bottom">
+      <p>&copy; 2025 Silva Sites. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+  
 </body>
 
 </html>
