texto dos cards

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
               <div class="w-4 h-1 rounded bg-blue-500"></div>
             </div>
             <h1 class="text-4xl font-bold mb-4">Seu negócio online com identidade e performace</h1>
-            <p class="text-gray-300 mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero
-              risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
+            <p class="text-gray-300 mb-6">Crie sua presença digital com identidade e performance.<br>
+              Na <strong>Silva Sites</strong>, desenvolvemos sites e soluções inteligentes que traduzem a essência do seu negócio e geram resultados reais.</p>
             <button
               class="bg-cyan-300 text-black font-medium px-6 py-2 rounded-full shadow-md hover:bg-cyan-200 transition">Solicite
               nossos serviços</button>
@@ -55,20 +55,28 @@
       <!-- Cards -->
       <div class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-6 py-2">
         <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-          <h3 class="font-semibold text-lg mb-2">🌌 Planets</h3>
-          <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <h3 class="font-semibold text-lg mb-2">Criação de Sites Profissionais</h3>
+          <p class="text-sm text-gray-300">Sites institucionais, pessoais e para negócios locais<br>
+            Design responsivo e otimizado para conversão<br>            
+            SEO básico incluso</p>
         </div>
         <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-          <h3 class="font-semibold text-lg mb-2">🚀 Interstellar</h3>
-          <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <h3 class="font-semibold text-lg mb-2">Plataformas Sob Medida</h3>
+          <p class="text-sm text-gray-300">Sistemas personalizados (catálogos, reservas, login de usuários etc.)<br>
+            Integração com bancos de dados e APIs<br>            
+            Foco em performance e escalabilidade</p>
         </div>
         <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-          <h3 class="font-semibold text-lg mb-2">🌀 Wormhole</h3>
-          <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <h3 class="font-semibold text-lg mb-2">Automação de Processos</h3>
+          <p class="text-sm text-gray-300">Formulários inteligentes com envio automático<br>
+            Integração com WhatsApp, e-mail, Google Sheets e CRMs<br>
+            Fluxos automatizados para vendas e atendimento</p>
         </div>
         <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-          <h3 class="font-semibold text-lg mb-2">⏳ Time</h3>
-          <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <h3 class="font-semibold text-lg mb-2">Landing Pages de Alta Conversão</h3>
+          <p class="text-sm text-gray-300">Páginas para lançamento, vendas ou captação de leads<br>
+            Foco em UX, carregamento rápido e copy estratégica<br>            
+            Integração com plataformas de anúncio e marketing</p>
         </div>
       </div>
     </div>
