ajustes sobre nos

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/styles/output.css" />
-  <title>Document</title>
+  <title>SilvaSites</title>
 </head>
 
-<body class="bg-fundo bg-bg-fundo font-fontText text-font">
+<body class="font-fontText text-font">
 
   <header class="bg-black flex items-center justify-between px-4 py-2 shadow-md w-full ">
     <div>
@@ -26,47 +26,47 @@
 
   <main class="">
     <!-- home -->
-    <div class="relative min-h-screen bg-bg-fundo bg-cover bg-center">
-      <div class="absolute inset-0 bg-gradient-to-r from-black/80 to-transparent"></div>
-
-      <div class="relative z-10 max-w-6xl mx-auto px-6 py-20 flex flex-col md:flex-row items-center gap-10">
-        <div class="md:w-1/2">
-          <div class="bg-black/40 backdrop-blur-md rounded-xl p-8">
-            <!-- Linhas coloridas -->
-            <div class="flex space-x-2 mb-4">
-              <div class="w-4 h-1 rounded bg-red-500"></div>
-              <div class="w-4 h-1 rounded bg-green-500"></div>
-              <div class="w-4 h-1 rounded bg-blue-500"></div>
+    <div class="bg-bg-fundo bg-cover bg-center">
+      <div class="min-h-screen " style=" background: linear-gradient(to bottom, rgb(0, 0, 0,2%) 0%,rgba(32, 32,
+      34, 0.1) 10%, rgba(0, 0, 0, 0.85) 20%, rgb(32, 30, 67)80%)">
+        <div class="relative z-10 max-w-6xl mx-auto px-6 py-20 flex flex-col md:flex-row items-center gap-10">
+          <div class="md:w-1/2">
+            <div class="bg-black/40 backdrop-blur-md rounded-xl p-8">
+              <div class="flex space-x-2 mb-4">
+                <div class="w-4 h-1 rounded bg-red-500"></div>
+                <div class="w-4 h-1 rounded bg-green-500"></div>
+                <div class="w-4 h-1 rounded bg-blue-500"></div>
+              </div>
+              <h1 class="text-4xl font-bold mb-4">Seu negócio online com identidade e performaçe</h1>
+              <p class="text-gray-300 mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero
+                risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
+              <button
+                class="bg-cyan-300 text-black font-medium px-6 rounded-full shadow-md hover:bg-cyan-200 transition">Solicite
+                nossos serviços</button>
             </div>
-            <h1 class="text-4xl font-bold mb-4">Seu negócio online com identidade e performaçe</h1>
-            <p class="text-gray-300 mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero
-              risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
-            <button
-              class="bg-cyan-300 text-black font-medium px-6 py-2 rounded-full shadow-md hover:bg-cyan-200 transition">Solicite
-              nossos serviços</button>
           </div>
-        </div>
 
 
-      </div>
+        </div>
 
-      <!-- Cards -->
-      <div class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-6 py-2">
-        <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-          <h3 class="font-semibold text-lg mb-2">🌌 Planets</h3>
-          <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-          <h3 class="font-semibold text-lg mb-2">🚀 Interstellar</h3>
-          <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-          <h3 class="font-semibold text-lg mb-2">🌀 Wormhole</h3>
-          <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-          <h3 class="font-semibold text-lg mb-2">⏳ Time</h3>
-          <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <!-- Cards -->
+        <div class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-6 py-2">
+          <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
+            <h3 class="font-semibold text-lg mb-2">🌌 Planets</h3>
+            <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
+            <h3 class="font-semibold text-lg mb-2">🚀 Interstellar</h3>
+            <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
+            <h3 class="font-semibold text-lg mb-2">🌀 Wormhole</h3>
+            <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
+            <h3 class="font-semibold text-lg mb-2">⏳ Time</h3>
+            <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -74,15 +74,14 @@
 
     <!-- sobre nos -->
 
-    <div class="rotate-0" style=" background: linear-gradient(to bottom, rgb(0, 0, 0,2%) 0%,rgba(32, 32,
-      34, 0.1) 10%, rgba(0, 0, 0, 0.85) 50%, rgb(32, 30, 67)100%)">
+    <div class="bg-fundo">
 
-      <div class="flex flex-col items-center p-5 ">
+      <div class="flex flex-col items-center p-2 mb-5">
         <div class="relative z-10 flex flex-col items-center justify-center h-full px-4 text-center">
-          <h2 class="text-2xl md:text-4xl font-bold mb-4 mt-3">Sobre nós</h2>
+          <h2 class="text-2xl md:text-4xl font-bold mb-4 my-5">Sobre nós</h2>
         </div>
         <div>
-          <p class="text-lg md:text-xl max-w-xl">
+          <p class="text-lg md:text-xl max-w-xl p-5s">
             A Silva Sites nasceu com um propósito claro: ajudar
             negócios a se posicionarem no digital com
             profissionalismo e estratégia. Acreditamos que todo
@@ -94,30 +93,25 @@
         </div>
       </div>
 
-
-
-
-      <div class="flex flex-col items-center justify-center h-full text-center px-4 p-16 m-1">
-        <h2 class="text-2xl md:text-4xl font-bold pb-2 mb-4">Criamos soluções digitais reais</h2>
-        <p class=" text-lg">
+      <div class="p-3 m-10 relative z-10 flex flex-col items-center justify-center h-full text-center md: my-20">
+        <h2 class="text-2xl md:text-4xl font-bold mx-4 p-5">Criamos soluções digitais reais</h2>
+        <p class="text-lg md:text-xl max-w-xl">
           Criamos sites, plataformas e automações com foco total na sua realidade. Nada de soluções genéricas: aqui,
           cada projeto é pensado para refletir sua marca e atingir seus objetivos.
         </p>
       </div>
 
-
-
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 px-6 py-1 text-center">
-        <div class=" p-3  bg-white py-2 rounded-lg">
+      <div class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-3 py-2 font-medium">
+        <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
           <p>Criação de sites institucionais e personalizados</p>
         </div>
-        <div class=" p-3 bg-white py-2  rounded-lg">
+        <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
           <p>Desenvolvimento de plataformas e landing pages</p>
         </div>
-        <div class=" p-3 bg-white py-2  rounded-lg">
+        <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
           <p>Integrações e automações sob medida</p>
         </div>
-        <div class=" p-3 bg-white py-2  rounded-lg">
+        <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
           <p>Consultoria digital e otimização</p>
         </div>
       </div>
