Inclusão dasection serviços

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/styles/output.css" />
   <link rel="icon" type="image/png" href="./assets/favicon.png"/>
   <link rel="stylesheet" href="./styles/footer.css">
+  <link rel="stylesheet" href="./styles/servicos.css">
   <title>Silva Sites</title>
 </head>
 
@@ -142,6 +143,37 @@
     </div>
 
   </main>
+
+<!--Inicio nossos serviços-->
+
+<section id="servicos" class="servicos-section">
+  <h2>Nossos Serviços</h2>
+  <div class="servicos-container">
+
+    <div class="servico-card">
+      <h3>Criação de Sites Personalizados</h3>
+      <p>Desenvolvemos sites únicos, responsivos e com foco em performance. Alinhados à identidade do seu negócio e objetivos estratégicos.</p>
+    </div>
+
+    <div class="servico-card">
+      <h3>Plataformas Sob Medida</h3>
+      <p>Soluções digitais que automatizam processos e otimizam a gestão do seu negócio com painéis e áreas personalizadas.</p>
+    </div>
+
+    <div class="servico-card">
+      <h3>Automação de Processos</h3>
+      <p>Automatizamos tarefas repetitivas e integramos ferramentas inteligentes que aumentam a eficiência da sua operação.</p>
+    </div>
+
+    <div class="servico-card">
+      <h3>Landing Pages de Alta Conversão</h3>
+      <p>Landing pages estratégicas com design focado em conversão, copy persuasiva e estrutura otimizada para resultados reais.</p>
+    </div>
+
+  </div>
+</section>
+
+<!--Fim nossos serviços-->
 
   <!-- inicio do footer-->
   
