--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/styles/output.css" />
-  <<<<<<< HEAD <title>SilvaSites</title>
-    =======
-    <link rel="icon" type="image/png" href="./assets/favicon.png" />
-    <link rel="stylesheet" href="./styles/footer.css">
-    <title>Silva Sites</title>
-    >>>>>>> 5db32fd3d72deaccc1e8bb53b54e30ada8362fe7
+  <title>SilvaSites</title>
+  <link rel="icon" type="image/png" href="./assets/favicon.png" />
+  <link rel="stylesheet" href="./styles/footer.css">
+  <title>Silva Sites</title>
 </head>
 
 <body class="font-fontText text-font">
@@ -49,120 +47,95 @@
                 class="bg-cyan-300 text-black font-medium px-6 rounded-full shadow-md hover:bg-cyan-200 transition">Solicite
                 nossos serviços</button>
             </div>
-            <<<<<<< HEAD=======<h1 class="text-4xl font-bold mb-4">Seu negócio online com identidade e performace</h1>
-              <p class="text-gray-300 mb-6">Crie sua presença digital com identidade e performance.<br>
-                Na <strong>Silva Sites</strong>, desenvolvemos sites e soluções inteligentes que traduzem a essência do
-                seu negócio e geram resultados reais.</p>
-              <button
-                class="bg-cyan-300 text-black font-medium px-6 py-2 rounded-full shadow-md hover:bg-cyan-200 transition">Solicite
-                nossos serviços</button>
-              >>>>>>> 5db32fd3d72deaccc1e8bb53b54e30ada8362fe7
           </div>
 
 
         </div>
-
-        <<<<<<< HEAD <!-- Cards -->
-          <div class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-6 py-2">
-            <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-              <h3 class="font-semibold text-lg mb-2">🌌 Planets</h3>
-              <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-              <h3 class="font-semibold text-lg mb-2">🚀 Interstellar</h3>
-              <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-              <h3 class="font-semibold text-lg mb-2">🌀 Wormhole</h3>
-              <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-              <h3 class="font-semibold text-lg mb-2">⏳ Time</h3>
-              <p class="text-sm text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            =======
-            <!-- Cards -->
-            <div class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-6 py-2">
-              <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-                <h3 class="font-semibold text-lg mb-2">Criação de Sites Profissionais</h3>
-                <p class="text-sm text-gray-300">Sites institucionais, pessoais e para negócios locais<br>
-                  Design responsivo e otimizado para conversão<br>
-                  SEO básico incluso</p>
-              </div>
-              <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-                <h3 class="font-semibold text-lg mb-2">Plataformas Sob Medida</h3>
-                <p class="text-sm text-gray-300">Sistemas personalizados (catálogos, reservas, login de usuários
-                  etc.)<br>
-                  Integração com bancos de dados e APIs<br>
-                  Foco em performance e escalabilidade</p>
-              </div>
-              <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-                <h3 class="font-semibold text-lg mb-2">Automação de Processos</h3>
-                <p class="text-sm text-gray-300">Formulários inteligentes com envio automático<br>
-                  Integração com WhatsApp, e-mail, Google Sheets e CRMs<br>
-                  Fluxos automatizados para vendas e atendimento</p>
-              </div>
-              <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
-                <h3 class="font-semibold text-lg mb-2">Landing Pages de Alta Conversão</h3>
-                <p class="text-sm text-gray-300">Páginas para lançamento, vendas ou captação de leads<br>
-                  Foco em UX, carregamento rápido e copy estratégica<br>
-                  Integração com plataformas de anúncio e marketing</p>
-              </div>
-            </div>
+        <!-- Cards -->
+        <div class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-6 py-2">
+          <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
+            <h3 class="font-semibold text-lg mb-2">Criação de Sites Profissionais</h3>
+            <p class="text-sm text-gray-300">Sites institucionais, pessoais e para negócios locais<br>
+              Design responsivo e otimizado para conversão<br>
+              SEO básico incluso</p>
           </div>
-          <!-- fim home -->
+          <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
+            <h3 class="font-semibold text-lg mb-2">Plataformas Sob Medida</h3>
+            <p class="text-sm text-gray-300">Sistemas personalizados (catálogos, reservas, login de usuários
+              etc.)<br>
+              Integração com bancos de dados e APIs<br>
+              Foco em performance e escalabilidade</p>
+          </div>
+          <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
+            <h3 class="font-semibold text-lg mb-2">Landing Pages de Alta Conversão</h3>
+            <p class="text-sm text-gray-300">Páginas para lançamento, vendas ou captação de leads<br>
+              Foco em UX, carregamento rápido e copy estratégica<br>
+              Integração com plataformas de anúncio e marketing</p>
+          </div>
+          <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
+            <h3 class="font-semibold text-lg mb-2">Automação de Processos</h3>
+            <p class="text-sm text-gray-300">Formulários inteligentes com envio automático<br>
+              Integração com WhatsApp, e-mail, Google Sheets e CRMs<br>
+              Fluxos automatizados para vendas e atendimento</p>
+          </div>
 
-          <!-- sobre nos -->
+        </div>
 
-          <div class="bg-fundo">
+        <!--Fim Cards -->
 
-            <div class="flex flex-col items-center p-2 mb-5">
-              <div class="relative z-10 flex flex-col items-center justify-center h-full px-4 text-center">
-                <h2 class="text-2xl md:text-4xl font-bold mb-4 my-5">Sobre nós</h2>
-              </div>
-              <div>
-                <p class="text-lg md:text-xl max-w-xl p-5s">
-                  A Silva Sites nasceu com um propósito claro: ajudar
-                  negócios a se posicionarem no digital com
-                  profissionalismo e estratégia. Acreditamos que todo
-                  empreendedor merece um site que represente sua
-                  marca, gere oportunidades e facilite sua rotina. Aqui,
-                  cada projeto é construído com escuta, dedicação e
-                  visão de crescimento.
-                </p>
-              </div>
+        <!-- Fim home -->
+
+        <!-- Sobre nos -->
+
+        <div class="bg-fundo">
+
+          <div class="flex flex-col items-center p-2 mb-5">
+            <div class="relative z-10 flex flex-col items-center justify-center h-full px-4 text-center">
+              <h2 class="text-2xl md:text-4xl font-bold mb-4 my-5">Sobre nós</h2>
             </div>
-
-            <div class="p-3 m-10 relative z-10 flex flex-col items-center justify-center h-full text-center md: my-20">
-              <h2 class="text-2xl md:text-4xl font-bold mx-4 p-5">Criamos soluções digitais reais</h2>
-              <p class="text-lg md:text-xl max-w-xl">
-                Criamos sites, plataformas e automações com foco total na sua realidade. Nada de soluções genéricas:
-                aqui,
-                cada projeto é pensado para refletir sua marca e atingir seus objetivos.
+            <div>
+              <p class="text-lg md:text-xl max-w-xl p-5s">
+                A Silva Sites nasceu com um propósito claro: ajudar
+                negócios a se posicionarem no digital com
+                profissionalismo e estratégia. Acreditamos que todo
+                empreendedor merece um site que represente sua
+                marca, gere oportunidades e facilite sua rotina. Aqui,
+                cada projeto é construído com escuta, dedicação e
+                visão de crescimento.
               </p>
             </div>
-
-            <div
-              class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-3 py-2 font-medium">
-              <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-                <p>Criação de sites institucionais e personalizados</p>
-              </div>
-              <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-                <p>Desenvolvimento de plataformas e landing pages</p>
-              </div>
-              <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-                <p>Integrações e automações sob medida</p>
-              </div>
-              <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-                <p>Consultoria digital e otimização</p>
-              </div>
-            </div>
-
-
-
           </div>
 
-          <!-- fim sobre nos -->
+          <div class="p-3 m-10 relative z-10 flex flex-col items-center justify-center h-full text-center md: my-20">
+            <h2 class="text-2xl md:text-4xl font-bold mx-4 p-5">Criamos soluções digitais reais</h2>
+            <p class="text-lg md:text-xl max-w-xl">
+              Criamos sites, plataformas e automações com foco total na sua realidade. Nada de soluções genéricas:
+              aqui,
+              cada projeto é pensado para refletir sua marca e atingir seus objetivos.
+            </p>
+          </div>
+
+          <div
+            class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-3 py-2 font-medium">
+            <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
+              <p>Criação de sites institucionais e personalizados</p>
+            </div>
+            <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
+              <p>Desenvolvimento de plataformas e landing pages</p>
+            </div>
+            <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
+              <p>Integrações e automações sob medida</p>
+            </div>
+            <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
+              <p>Consultoria digital e otimização</p>
+            </div>
+          </div>
+
+
+
+        </div>
+
+        <!-- fim sobre nos -->
 
       </div>
     </div>
