corrigindo html, deixando mais legivel

--- a/index.html
+++ b/index.html
@@ -24,34 +24,32 @@
       <a href="#" class="hover:text-blue-600 transition-colors">Serviços</a>
       <a href="#" class="hover:text-blue-600 transition-colors">Contato</a>
     </nav>
-
   </header>
 
-  <main class="">
-    <!-- home -->
-    <div class="bg-bg-fundo bg-cover bg-center">
-      <div class="min-h-screen " style=" background: linear-gradient(to bottom, rgb(0, 0, 0,2%) 0%,rgba(32, 32,
-      34, 0.1) 10%, rgba(0, 0, 0, 0.85) 20%, rgb(32, 30, 67)80%)">
-        <div class="relative z-10 max-w-6xl mx-auto px-6 py-20 flex flex-col md:flex-row items-center gap-10">
-          <div class="md:w-1/2">
-            <div class="bg-black/40 backdrop-blur-md rounded-xl p-8">
-              <div class="flex space-x-2 mb-4">
-                <div class="w-4 h-1 rounded bg-red-500"></div>
-                <div class="w-4 h-1 rounded bg-green-500"></div>
-                <div class="w-4 h-1 rounded bg-blue-500"></div>
-              </div>
-              <h1 class="text-4xl font-bold mb-4">Seu negócio online com identidade e performaçe</h1>
-              <p class="text-gray-300 mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero
-                risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
-              <button
-                class="bg-cyan-300 text-black font-medium px-6 rounded-full shadow-md hover:bg-cyan-200 transition">Solicite
-                nossos serviços</button>
+  <main class="bg-bg-fundo bg-cover bg-center">
+
+    <section
+      style="background: linear-gradient(to bottom, rgb(0, 0, 0, 0.02) 0%, rgba(32, 32, 34, 0.1) 20%, rgb(32, 30, 67) 45%);">
+      <!-- home -->
+      <div class="relative z-10 max-w-6xl mx-auto px-6 py-20 items-center">
+        <div class="md:w-1/2">
+          <div class="bg-black/40 backdrop-blur-md rounded-xl p-8">
+            <div class="flex space-x-2 mb-4">
+              <div class="w-4 h-1 rounded bg-red-500"></div>
+              <div class="w-4 h-1 rounded bg-green-500"></div>
+              <div class="w-4 h-1 rounded bg-blue-500"></div>
             </div>
+            <h1 class="text-4xl font-bold mb-4">Seu negócio online com identidade e performaçe</h1>
+            <p class="text-gray-300 mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Faucibus in libero
+              risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
+            <button
+              class="bg-cyan-300 text-black font-medium px-6 rounded-full shadow-md hover:bg-cyan-200 transition">Solicite
+              nossos serviços</button>
           </div>
-
-
         </div>
-        <!-- Cards -->
+        <!-- fim home -->
+        <!-- home Cards -->
         <div class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-6 py-2">
           <div class="bg-white/10 backdrop-blur-lg p-4 rounded-xl text-center border border-white/20">
             <h3 class="font-semibold text-lg mb-2">Criação de Sites Profissionais</h3>
@@ -80,102 +78,92 @@
           </div>
 
         </div>
+        <!-- fim home Cards -->
+    </section>
 
-        <!--Fim Cards -->
+    <section
+      style="background: linear-gradient(to bottom,  rgb(32, 30, 67) 45%, rgba(32, 32, 34, 0.1) 70%, rgb(0, 0, 0, 0.02) 75%);">
 
-        <!-- Fim home -->
-
-        <!-- Sobre nos -->
-
-        <div class="bg-fundo">
-
-          <div class="flex flex-col items-center p-2 mb-5">
-            <div class="relative z-10 flex flex-col items-center justify-center h-full px-4 text-center">
-              <h2 class="text-2xl md:text-4xl font-bold mb-4 my-5">Sobre nós</h2>
-            </div>
-            <div>
-              <p class="text-lg md:text-xl max-w-xl p-5s">
-                A Silva Sites nasceu com um propósito claro: ajudar
-                negócios a se posicionarem no digital com
-                profissionalismo e estratégia. Acreditamos que todo
-                empreendedor merece um site que represente sua
-                marca, gere oportunidades e facilite sua rotina. Aqui,
-                cada projeto é construído com escuta, dedicação e
-                visão de crescimento.
-              </p>
-            </div>
-          </div>
-
-          <div class="p-3 m-10 relative z-10 flex flex-col items-center justify-center h-full text-center md: my-20">
-            <h2 class="text-2xl md:text-4xl font-bold mx-4 p-5">Criamos soluções digitais reais</h2>
-            <p class="text-lg md:text-xl max-w-xl">
-              Criamos sites, plataformas e automações com foco total na sua realidade. Nada de soluções genéricas:
-              aqui,
-              cada projeto é pensado para refletir sua marca e atingir seus objetivos.
-            </p>
-          </div>
-
-          <div
-            class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-3 py-2 font-medium">
-            <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-              <p>Criação de sites institucionais e personalizados</p>
-            </div>
-            <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-              <p>Desenvolvimento de plataformas e landing pages</p>
-            </div>
-            <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-              <p>Integrações e automações sob medida</p>
-            </div>
-            <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-              <p>Consultoria digital e otimização</p>
-            </div>
-          </div>
+      <!-- sobre nos -->
+      <div class="flex flex-col items-center p-2 mb-5">
+        <div class="relative z-10 flex flex-col items-center justify-center h-full px-4 text-center">
+          <h2 class="text-2xl md:text-4xl font-bold mb-4 my-5">Sobre nós</h2>
+        </div>
+        <div>
+          <p class="text-lg md:text-xl max-w-xl p-5s">
+            A Silva Sites nasceu com um propósito claro: ajudar
+            negócios a se posicionarem no digital com
+            profissionalismo e estratégia. Acreditamos que todo
+            empreendedor merece um site que represente sua
+            marca, gere oportunidades e facilite sua rotina. Aqui,
+            cada projeto é construído com escuta, dedicação e
+            visão de crescimento.
+          </p>
+        </div>
+      </div>
+      <div class="p-3 m-10 relative z-10 flex flex-col items-center justify-center h-full text-center md: my-20">
+        <h2 class="text-2xl md:text-4xl font-bold mx-4 p-5">Criamos soluções digitais reais</h2>
+        <p class="text-lg md:text-xl max-w-xl">
+          Criamos sites, plataformas e automações com foco total na sua realidade. Nada de soluções
+          genéricas:
+          aqui,
+          cada projeto é pensado para refletir sua marca e atingir seus objetivos.
+        </p>
+      </div>
+      <div class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-3 py-2 font-medium">
+        <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
+          <p>Criação de sites institucionais e personalizados</p>
+        </div>
+        <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
+          <p>Desenvolvimento de plataformas e landing pages</p>
+        </div>
+        <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
+          <p>Integrações e automações sob medida</p>
+        </div>
+        <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
+          <p>Consultoria digital e otimização</p>
+        </div>
+      </div>
+      <!-- fim sobre nos -->
+    </section>
 
 
 
+    <!-- footer -->
+    <footer class="site-footer">
+      <div class="footer-container">
+        <div class="footer-brand">
+          <img class="favicon-footer" src="/assets/favicon.png" alt="Favicon Silva Sites">
+          <h2>Silva Sites</h2>
+          <p>Seu negócio online com identidade e performace.</p>
         </div>
 
-        <!-- fim sobre nos -->
+        <div class="footer-links">
+          <h3>Links rápidos</h3>
+          <ul>
+            <li><a href="#hero">Início</a></li>
+            <li><a href="#sobrenos">Sobre nós</a></li>
+            <li><a href="#projetos">Projetos</a></li>
+            <li><a href="#servicos">Serviços</a></li>
+            <li><a href="#contato">Contato</a></li>
+          </ul>
+        </div>
 
+        <div class="footer-contato">
+          <h3>Fale conosco</h3>
+          <p>Email: contato@silvasites.com</p>
+          <p>WhatsApp: (00) 90000-0000</p>
+        </div>
       </div>
-    </div>
 
+      <div class="footer-bottom">
+        <p>&copy; 2025 Silva Sites. Todos os direitos reservados.</p>
+      </div>
+    </footer>
+    <!-- fim footer -->
   </main>
 
-  <!-- inicio do footer-->
 
-  <footer class="site-footer">
-    <div class="footer-container">
-      <div class="footer-brand">
-        <img class="favicon-footer" src="/assets/favicon.png" alt="Favicon Silva Sites">
-        <h2>Silva Sites</h2>
-        <p>Seu negócio online com identidade e performace.</p>
-      </div>
-
-      <div class="footer-links">
-        <h3>Links rápidos</h3>
-        <ul>
-          <li><a href="#hero">Início</a></li>
-          <li><a href="#sobrenos">Sobre nós</a></li>
-          <li><a href="#projetos">Projetos</a></li>
-          <li><a href="#servicos">Serviços</a></li>
-          <li><a href="#contato">Contato</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-contato">
-        <h3>Fale conosco</h3>
-        <p>Email: contato@silvasites.com</p>
-        <p>WhatsApp: (00) 90000-0000</p>
-      </div>
-    </div>
-
-    <div class="footer-bottom">
-      <p>&copy; 2025 Silva Sites. Todos os direitos reservados.</p>
-    </div>
-  </footer>
-
-  <!-- fim footer-->
 
 </body>
 
