--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
     <!-- fim sobre nos -->
 
+
     </div>
     </div>
 
@@ -174,6 +175,28 @@
 </section>
 
 <!--Fim nossos serviços-->
+
+
+<!-- Inicio Contato-->
+
+<section id="contato" class="contato-section">
+  <div class="container-contato">
+    <h2>Fale com a gente</h2>
+    <p>Tem um projeto em mente? Vamos conversar e tirar suas ideias do papel.</p>
+
+    <form class="form-contato" action="#" method="post">
+      <input type="text" name="nome" placeholder="Seu nome" required>
+      <input type="email" name="email" placeholder="Seu e-mail" required>
+      <textarea name="mensagem" placeholder="Escreva sua mensagem" rows="5" required></textarea>
+      <button type="submit">Enviar mensagem</button>
+    </form>
+
+    
+  </div>
+</section>
+
+
+<!-- Inicio Contato-->
 
   <!-- inicio do footer-->
   
