iniciando secão de vendas

--- a/index.html
+++ b/index.html
@@ -82,8 +82,12 @@
     </section>
 
     <section
-      style="background: linear-gradient(to bottom,  rgb(32, 30, 67) 45%, rgba(32, 32, 34, 0.1) 70%, rgb(0, 0, 0, 0.02) 75%);">
-
+      style="background: linear-gradient(to bottom,  rgb(32, 30, 67) 45%, rgba(32, 32, 34, 0.1) 57%, rgb(0, 0, 0, 0.02) 63%);">
+      <div class="flex space-x-2 ml-10">
+        <div class="w-4 h-1 rounded bg-red-500"></div>
+        <div class="w-4 h-1 rounded bg-green-500"></div>
+        <div class="w-4 h-1 rounded bg-blue-500"></div>
+      </div>
       <!-- sobre nos -->
       <div class="flex flex-col items-center p-2 mb-5">
         <div class="relative z-10 flex flex-col items-center justify-center h-full px-4 text-center">
@@ -127,10 +131,56 @@
       <!-- fim sobre nos -->
     </section>
 
+    <section>
+      <div class="flex min-h-screen"
+        style="background: linear-gradient(to bottom, rgb(0, 0, 0, 0.02) 0%, rgba(32, 32, 34, 0.1) 10%, rgb(32, 30, 67) 25%);">
+
+        <div class="w-1/2 flex flex-col justify-center items-start gap-4 p-10 ml-4">
+          <h1 class="text-4xl font-bold mb-4">Vamos conversar sobre seu projeto?</h1>
+          <p class="text-lg text-gray-700">Confira alguns de nossos projetos com empresas parceiras</p>
+          <a href="#" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition">WhatsApp</a>
+        </div>
+        <div class="w-1/2 flex flex-col justify-center items-center gap-6 p-10">
+          <a href="https://lachonete-blush.vercel.app" class="flex flex-col items-center">
+            <img src="./assets/lanchonete.png" alt="Lanchonete"
+              class="w-64 h-auto rounded shadow hover:max-w-96 transition" />
+          </a>
+          <a href="https://lachonete-blush.vercel.app" class="flex flex-col items-center">
+            <img src="./assets/pizzaria.png" alt="Pizzaria"
+              class="w-64 h-auto rounded shadow hover:max-w-96 transition" />
+          </a>
+        </div>
+      </div>
+
+
+      <div>
+        <div>
+          <img src="" alt="">
+        </div>
+        <div>
+          <h2></h2>
+          <p></p>
+        </div>
+        <div>
+          <h2></h2>
+          <p></p>
+        </div>
+        <div>
+          <h2></h2>
+          <p></p>
+        </div>
+      </div>
+
+      <div>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+    </section>
 
 
     <!-- footer -->
-    <footer class="site-footer">
+    <footer class=" site-footer">
       <div class="footer-container">
         <div class="footer-brand">
           <img class="favicon-footer" src="/assets/favicon.png" alt="Favicon Silva Sites">
