--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </div>
   
     <div class="footer-bottom">
-      <p>&copy; 2025 Silva Sites. Todos os direitos reservados.</p>
+      <p>&copy; 2025 Silva Sites. Todos os direitos reservados. 0012</p>
     </div>
   </footer>
   
