--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
       <div>
         <div>
-          <img src="" alt="">
+          <img src="./assets/lanchonete.png" alt="">
         </div>
         <div>
           <h2></h2>
