--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <img class="w-16 h-auto" src="./assets/favicon.png" alt="logo da Empresa" />
     </div>
     <nav class="flex space-x-6 font-medium">
-      <a href="#" class="hover:text-blue-600 transition-colors">Home</a>
-      <a href="#" class="hover:text-blue-600 transition-colors">Sobre nós</a>
-      <a href="#" class="hover:text-blue-600 transition-colors">Projetos</a>
+      <a href="#" class="hover:text-blue-600 transition-colors">Home</a>      
       <a href="#" class="hover:text-blue-600 transition-colors">Serviços</a>
+      <a href="#" class="hover:text-blue-600 transition-colors">Projetos</a>
+      <a href="#" class="hover:text-blue-600 transition-colors">Sobre nós</a>
       <a href="#" class="hover:text-blue-600 transition-colors">Contato</a>
     </nav>
   </header>
@@ -81,31 +81,9 @@
         <!-- fim home Cards -->
     </section>
 
-    <section
-      style="background: linear-gradient(to bottom,  rgb(32, 30, 67) 45%, rgba(32, 32, 34, 0.1) 57%, rgb(0, 0, 0, 0.02) 63%);">
-      <div class="flex space-x-2 ml-10">
-        <div class="w-4 h-1 rounded bg-red-500"></div>
-        <div class="w-4 h-1 rounded bg-green-500"></div>
-        <div class="w-4 h-1 rounded bg-blue-500"></div>
-      </div>
-      <!-- sobre nos -->
-      <div class="flex flex-col items-center p-2 mb-5">
-        <div class="relative z-10 flex flex-col items-center justify-center h-full px-4 text-center">
-          <h2 class="text-2xl md:text-4xl font-bold mb-4 my-5">Sobre nós</h2>
-        </div>
-        <div>
-          <p class="text-lg md:text-xl max-w-xl p-5s">
-            A Silva Sites nasceu com um propósito claro: ajudar
-            negócios a se posicionarem no digital com
-            profissionalismo e estratégia. Acreditamos que todo
-            empreendedor merece um site que represente sua
-            marca, gere oportunidades e facilite sua rotina. Aqui,
-            cada projeto é construído com escuta, dedicação e
-            visão de crescimento.
-          </p>
-        </div>
-      </div>
-      <div class="p-3 m-10 relative z-10 flex flex-col items-center justify-center h-full text-center md: my-20">
+    <!--Inicio servicos-->
+    <section>  
+    <div class="p-3 m-10 relative z-10 flex flex-col items-center justify-center h-full text-center md: my-20">
         <h2 class="text-2xl md:text-4xl font-bold mx-4 p-5">Criamos soluções digitais reais</h2>
         <p class="text-lg md:text-xl max-w-xl">
           Criamos sites, plataformas e automações com foco total na sua realidade. Nada de soluções
@@ -116,21 +94,35 @@
       </div>
       <div class="relative z-10 max-w-5xl mx-auto mt-10 grid grid-cols-1 md:grid-cols-4 gap-4 px-3 py-2 font-medium">
         <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-          <p>Criação de sites institucionais e personalizados</p>
+          <h3>Criação de Sites Profissionais</h3>
+          <p class="text-sm text-gray-300">Sites institucionais, pessoais e para negócios locais<br>
+              Design responsivo e otimizado para conversão<br>
+              SEO básico incluso</p>
         </div>
         <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-          <p>Desenvolvimento de plataformas e landing pages</p>
+          <h3>Plataformas Sob Medida</h3>
+          <p class="text-sm text-gray-300">Sistemas personalizados (catálogos, reservas, login de usuários
+              etc.)<br>
+              Integração com bancos de dados e APIs<br>
+              Foco em performance e escalabilidade</p>
         </div>
         <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-          <p>Integrações e automações sob medida</p>
+          <h3>Landing Pages de Alta Conversão</h3>
+          <p class="text-sm text-gray-300">Páginas para lançamento, vendas ou captação de leads<br>
+              Foco em UX, carregamento rápido e copy estratégica<br>
+              Integração com plataformas de anúncio e marketing</p>
         </div>
         <div class="bg-white/10 backdrop-blur-lg rounded-xl text-center border border-white/20 p-10">
-          <p>Consultoria digital e otimização</p>
+          <h3>Automação de Processos</h3>
+            <p class="text-sm text-gray-300">Formulários inteligentes com envio automático<br>
+              Integração com WhatsApp, e-mail, Google Sheets e CRMs<br>
+              Fluxos automatizados para vendas e atendimento</p>
         </div>
       </div>
-      <!-- fim sobre nos -->
     </section>
-
+    <!--fim servicos-->
+    
+    <!--Inicio projetos-->
     <section>
       <div class="flex min-h-screen"
         style="background: linear-gradient(to bottom, rgb(0, 0, 0, 0.02) 0%, rgba(32, 32, 34, 0.1) 10%, rgb(32, 30, 67) 25%);">
@@ -152,6 +144,52 @@
         </div>
       </div>
     </section>
+    <!--Fim projetos-->
+
+    <!-- sobre nos -->
+    <section
+      style="background: linear-gradient(to bottom,  rgb(32, 30, 67) 45%, rgba(32, 32, 34, 0.1) 57%, rgb(0, 0, 0, 0.02) 63%);">
+      <div class="flex space-x-2 ml-10">
+        <div class="w-4 h-1 rounded bg-red-500"></div>
+        <div class="w-4 h-1 rounded bg-green-500"></div>
+        <div class="w-4 h-1 rounded bg-blue-500"></div>
+      </div>
+      <div class="flex flex-col items-center p-2 mb-5">
+        <div class="relative z-10 flex flex-col items-center justify-center h-full px-4 text-center">
+          <h2 class="text-2xl md:text-4xl font-bold mb-4 my-5">Sobre nós</h2>
+        </div>
+        <div>
+          <p>
+              A <strong>Silva Sites</strong> nasceu com um propósito claro: ajudar negócios a se posicionarem no digital com profissionalismo, estratégia e identidade. Somos uma empresa jovem, mas formada por profissionais com experiência, vontade de transformar e dedicação total a cada projeto que assumimos.
+            </p>
+
+            <p>
+              Nossa missão é levar identidade e performance para o negócio do cliente por meio de soluções digitais inteligentes. Acreditamos que um bom site vai além da estética — ele representa sua marca, comunica seus valores, gera oportunidades e facilita a rotina. Por isso, escutamos com atenção, planejamos com cuidado e desenvolvemos com excelência.
+            </p>
+
+            <p>
+              Olhamos para o futuro com a visão de sermos referência em desenvolvimento web, entregando sites que combinam tecnologia, estratégia e design de forma personalizada. Aqui, cada entrega é feita com propósito: ajudar você a crescer no digital com autenticidade e resultados reais.
+            </p>
+        </div>
+      </div>
+    </section>
+    <!-- fim sobre nos -->
+
+    <!--Inicio contato-->
+    <section id="contato" class="contato-section">
+  <div class="container-contato">
+    <h2>Fale com a gente</h2>
+    <p>Tem um projeto em mente? Vamos conversar e tirar suas ideias do papel.</p>
+
+    <form class="form-contato" action="#" method="post">
+      <input type="text" name="nome" placeholder="Seu nome" required>
+      <input type="email" name="email" placeholder="Seu e-mail" required>
+      <textarea name="mensagem" placeholder="Escreva sua mensagem" rows="5" required></textarea>
+      <button type="submit">Enviar mensagem</button>
+    </form>
+  </div>
+</section>
+    <!--Fim contato-->
 
 
     <!-- footer -->
@@ -167,9 +205,8 @@
           <h3>Links rápidos</h3>
           <ul>
             <li><a href="#hero">Início</a></li>
-            <li><a href="#sobrenos">Sobre nós</a></li>
             <li><a href="#projetos">Projetos</a></li>
-            <li><a href="#servicos">Serviços</a></li>
+            <li><a href="#sobrenos">Sobre nós</a></li>
             <li><a href="#contato">Contato</a></li>
           </ul>
         </div>
