Serviçoes no footer

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
           <h3>Links rápidos</h3>
           <ul>
             <li><a href="#hero">Início</a></li>
+            <li><a href="#servicos">Serviços</a></li>
             <li><a href="#projetos">Projetos</a></li>
             <li><a href="#sobrenos">Sobre nós</a></li>
             <li><a href="#contato">Contato</a></li>
