--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
             <li><a href="#projetos">Projetos</a></li>
             <li><a href="#sobrenos">Sobre nós</a></li>
             <li><a href="#contato">Contato</a></li>
-          </ul>
+
+          </ul>git checkout main
         </div>
 
         <div class="footer-contato">
